[package]
name = "acceptevm"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
sled = "0.34.7"
thiserror = "1.0.59"
serde = { version="1.0.197",features=["derive"] }
sha2 = "0.10.8"
tokio = "1.37.0"
uuid = {version="1.8.0",features=["v4"]}
reqwest = "0.12.4"
log = "0.4.21"
zeroize = {version="1.7.0",features=["zeroize_derive"]}
async-std = "1.12.0"
ethers = "2.0.14"
serde_json = "1.0.117"
