[package]
name = "acceptevm"
version = "0.0.4"
edition = "2021"
description = "Accept native EVM payments in your application with automatic transfers"
repository = "https://github.com/saefstroem/acceptevm"
license = "MIT"
keywords = ["ethereum", "crypto", "payments", "web3", "alloy"]

[dependencies]
thiserror = "2.0.18"
serde = { version="1.0.197",features=["derive"] }
sha2 = "0.10.9"
tokio = {version="1.50.0",features=["full"]}
zeroize = {version="1.8.2",features=["zeroize_derive"]}
alloy = {version="1.7.3",features=["essentials"]}
tracing = "0.1.44"
ahash = "0.8.12"
url = "2"
k256 = {version="0.13",features=["ecdsa"],default-features=false}
