[package]
name = "acceptevm"
version = "0.0.5"
edition = "2021"
description = "Accept native EVM payments in your application with automatic transfers"
repository = "https://github.com/saefstroem/acceptevm"
license = "MIT"
keywords = ["ethereum", "crypto", "payments", "web3", "alloy"]

[dependencies]
thiserror = "2.0.18"
serde = { version="1.0.197",features=["derive"] }
sha2 = "0.11.0"
tokio = {version="1.52.1",features=["full"]}
zeroize = {version="1.8.2",features=["zeroize_derive"]}
alloy = {version="2.0.0",features=["essentials"]}
tracing = "0.1.44"
ahash = "0.8.12"
url = "2.5.8"
k256 = {version="0.13",features=["ecdsa"],default-features=false}
hex = "0.4.3"
